fix(all): Add modal-content class for more lisibility, add new confirm-msg modal, move addFieldsEvent to add input event to every fields, add trim on fields values when necessary and regex to firstname and lastname, manage modal-content and confirm-msg display on open modal and when close confirm-modal, remove dataset when resetData, create addEventsOnConfirmationModal function, modify text-align to left for display input errors, remove confirm-toast css and his transition.

--- a/starterOnly/assets/css/main.css
+++ b/starterOnly/assets/css/main.css
@@ -81,7 +81,7 @@ main {
   padding-right: 2vw;
   margin: 1px 20px 15px;
   border-radius: 2rem;
-  text-align: justify;
+  /* text-alixgn: justify; */
 }
 
 .modal-btn {
@@ -117,22 +117,8 @@ main {
   color: #fff;
   position: relative;
   text-align: left;
-  /* min-width: 424px; */
   min-width: 504px;
 }
-/* .hero-content::after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  background: #232323;
-  position: absolute;
-  right: -80px;
-  top: 0;
-}
-.hero-content > * {
-  position: relative;
-  z-index: 1;
-} */
 
 .hero-headline {
   font-size: 6rem;
@@ -141,7 +127,6 @@ main {
 }
 
 .hero-text {
-  /* width: 146%; */
   width: 106%;
   font-weight: normal;
   margin-top: 57px;
