--- a/starterOnly/assets/css/modal.css
+++ b/starterOnly/assets/css/modal.css
@@ -38,18 +38,50 @@
   display: none;
 }
 
-.content {
+.modal-content {
   margin: 5% auto;
   width: 100%;
-  max-width: 500px;
-  animation-name: modalopen;
-  animation-duration: var(--modal-duration);
+  max-width: 536px;
   background: #232323;
   border-radius: 10px;
   overflow: hidden;
   position: relative;
   color: #fff;
   padding-top: 10px;
+}
+
+.content {
+  animation-name: modalopen;
+  animation-duration: var(--modal-duration);
+}
+
+.confirm-msg {
+  height: 750px;
+  font-size: 36px;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.flex {
+  display: flex;
+}
+
+.close-confirm-container {
+  text-align: right;
+  display: flex;
+  justify-content: end;
+  font-size: 18px;
+}
+
+.close-confirm-container:hover {
+  cursor: pointer;
+}
+
+.thanks {
+  padding: 0 120px 0 103px;
+  font-weight: 400;
+  text-align: center;
 }
 
 .modal-body {
@@ -84,7 +116,7 @@ input {
   display: block;
   margin-top: 7px;
   margin-bottom: 7px;
-  text-align: right;
+  text-align: left;
   line-height: 0.3;
   opacity: 0;
   transition: 0.3s;
@@ -217,37 +249,6 @@ input[data-error]::after {
   color: #fff;
   cursor: pointer;
   border: 0;
-}
-
-.confirm-toast {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: fixed;
-  right: 0;
-  top: 0;
-  background-color: #7dba7d;
-  color: #fff;
-  gap: 28px;
-  padding: 28px;
-  margin: 7px;
-  box-shadow: 0 2px 6px 2px rgba(0, 0, 0, 0.2);
-  border-radius: 5px;
-  cursor: default;
-  animation: hideToast 5000ms forwards;
-}
-
-@keyframes hideToast {
-  0% {
-    opacity: 1;
-  }
-  90% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-    display: none;
-  }
 }
 
 .bold {
